--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,6 @@ add_executable(wet2mivneiNirNiz main.cpp
         Player_UnionFind_Node.cpp
         Player_UnionFind_Node.h
         Player.h
-        Player.cpp)
+        Player.cpp
+        HashTable.h
+        HashTable.cpp)
