--- a/test.in
+++ b/test.in
@@ -2,7 +2,7 @@ add_team 1
 add_team 2
 add_team 3
 remove_team 3
-add_player 1001 1 2,3,4,5,1 0 15 2 true
+add_player 1001 1 2,3,4,5,1 z 15 2 true
 add_player 2001 2 4,3,5,2,1 0 17 1 true
 play_match 1 2
 num_played_games_for_player 1001
